# ac-pcap-viewer

./: .deployments  .dockerignore  .gitignore  AGENTS.md  BUILDS_VERIFIED.md  BUILD_ANALYSIS.md  CHECKS  CI_VERIFIED.md  CLAUDE.md  Cargo.toml  Dockerfile  FEATURE_PARITY.md  HEX_DISPLAY_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  PLAN.txt  PR_DESCRIPTION.md  README.md  STATUS.md  WEB_DESKTOP_SPLIT.md  bot.Dockerfile  dist-workspace.toml  nginx.conf  pcap.Dockerfile
.github/workflows/: ci.yml  deploy.yml  docker.yml  release.yml
conf/: nginx.conf
crates/app/: Cargo.toml  README.md  build.sh  index.html
crates/app/pkg/: index.html  web.01413cd077a1d616.js  web_bg.01413cd077a1d616.wasm
crates/app/src/: filter.rs  lib.rs  state.rs  time_scrubber.rs
crates/app/src/ui/: ac_json_tree.rs  detail_panel.rs  error_dialog.rs  file_panel.rs  hyper_tree.rs  mod.rs  packet_list.rs  weenie_panel.rs
crates/app/wix/: main.wxs
crates/bot/: Cargo.toml
crates/bot/src/: bot.rs  db.rs  discord.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  tui.rs
crates/common/: Cargo.toml
crates/common/examples/: debug_msg.rs  find_pantaloons.rs
crates/common/src/: lib.rs  packet_flags.rs  weenie.rs  weenie_extractor.rs
crates/common/src/messages/: mod.rs
crates/common/tests/: filter_tests.rs
crates/lib/: Cargo.toml
crates/lib/examples/: debug_msg.rs  find_pantaloons.rs
crates/lib/src/: enums.rs  lib.rs  serialization.rs  weenie.rs  weenie_extractor.rs
crates/lib/src/messages/c2s/: mod.rs
crates/lib/src/messages/c2s/actions/: item.rs
crates/lib/src/messages/s2c/events/: item.rs  magic.rs
crates/lib/src/properties/: property_names.rs
crates/lib/src/protocol/: fragment.rs  packet.rs  reader.rs
crates/lib/tests/: filter_tests.rs
crates/parser/: Cargo.toml
crates/parser/examples/: debug_msg.rs  find_pantaloons.rs
crates/parser/src/: fragment.rs  lib.rs  message.rs  packet.rs  properties.rs  reader.rs
crates/parser/src/messages/: c2s.rs  mod.rs  s2c.rs
crates/parser/src/messages/c2s/actions/: character.rs  inventory.rs  mod.rs
crates/parser/src/messages/s2c/: mod.rs  qualities.rs
crates/parser/src/messages/s2c/events/: character.rs  mod.rs
crates/parser/src/properties/: enum_names.rs  highlight_masks.rs  mod.rs  profiles.rs  readers.rs
crates/parser/src/protocol/: mod.rs  reader.rs
crates/parser/tests/: filter_tests.rs
crates/web/: Cargo.toml  README.md  build.rs  build.sh  index.html
crates/web-server/: Cargo.toml
crates/web-server/src/: discord.rs  main.rs
crates/web/src/: lib.rs  state.rs  time_scrubber.rs
crates/web/src/ui/: detail_panel.rs  file_panel.rs  mod.rs  packet_list.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
src/: cli.rs  main.rs  properties.rs  reader.rs  tui.rs
src/messages/: c2s.rs  s2c.rs
static/: index.html
tests/: filter_tests.rs
