[workspace]
resolver = "2"
members = [
  "crates/app",
  "crates/cli",
  "crates/lib",
  "crates/web",
  "crates/xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Optimize release builds for size (especially for WASM)
[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1

# Even smaller WASM builds
[profile.release-wasm]
inherits = "release"
opt-level = "z"
panic = "abort"
