[workspace]
resolver = "2"
members = [
  "crates/app",
  "crates/common",
  "crates/web",
  "crates/xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
acprotocol = { git = "https://github.com/amoeba/asheron-rs", default-features = false }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Optimize release builds for size (especially for WASM)
[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1

# Even smaller WASM builds
[profile.release-wasm]
inherits = "release"
opt-level = "z"
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
