[package]
name = "app"
version.workspace = true
edition.workspace = true
description = "Desktop UI for Asheron's Call PCAP viewer"
repository = "https://github.com/amoeba/ac-pcap-viewer"
authors = ["Bryce Mecum"]

[package.metadata.wix]
upgrade-guid = "8FBE669B-ADE6-44D6-8E50-75CBB7101FC6"
path-guid = "AF19405C-EC3D-480A-A0B9-AC5A87594859"
license = false
eula = false

[lib]
crate-type = ["rlib"]

# Desktop binary
[[bin]]
name = "desktop"
path = "src/bin/desktop.rs"

[dependencies]
anyhow.workspace = true
base64 = "0.22"
eframe = { version = "0.29", default-features = false, features = [
  "default_fonts",
  "glow",
] }
egui_extras = { version = "0.29", features = ["serde"] }
egui_json_tree = "0.7"
hex = "0.4"
common = { path = "../common" }
log = "0.4"
serde.workspace = true
serde_json.workspace = true

# Desktop-specific dependencies (optional, enabled by "desktop" feature)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.11", optional = true }
rfd = { version = "0.15", optional = true }

# Web-specific dependencies (needed for file loading)
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Location",
  "Request",
  "RequestInit",
  "Response",
  "UrlSearchParams",
  "Window",
] }

[features]
default = ["desktop"]
desktop = ["env_logger", "rfd"]
