[package]
name = "cli"
version.workspace = true
edition.workspace = true
description = "CLI for Asheron's Call PCAP parser"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
lib = { path = "../lib" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
