[package]
name = "lib"
version.workspace = true
edition.workspace = true
description = "AC PCAP parser library with shared types"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
pcap-parser = "0.15"
bitflags = "2.4"
hex = "0.4"
base64 = "0.22"
