[package]
name = "web"
version.workspace = true
edition.workspace = true
description = "Web UI for Asheron's Call PCAP parser (WASM)"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Web build uses app library code without desktop-specific features
# (file dialogs and native logging aren't used on web)
# All UI features and parsing code are included
app = { path = "../app", default-features = false }
lib = { path = "../lib" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
log = "0.4"
hex = "0.4"
base64 = "0.22"

# Web-specific dependencies (only for WASM target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_json_tree = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlBodyElement",
    "DragEvent",
    "DataTransfer",
    "FileList",
    "File",
    "FileReader",
    "Blob",
    "Request",
    "RequestInit",
    "Response",
    "Location",
    "Url",
    "UrlSearchParams",
    "CssStyleDeclaration",
    "Event",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
